--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	<header class="w3-display-container w3-content w3-wide parallax w3-hide-small w3-hide-medium" style="max-width:1600px;" id="home">
 	  
 	  <div class="w3-display-left w3-padding-large">
-    	<h1 class="w3-animate-opacity" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
-    	<h1 class="w3-animate-opacity w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
+    	<h1 class="w3-animate-zoom" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
+    	<h1 class="w3-animate-zoom w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
   	</div>
 </header>
 
@@ -74,26 +74,26 @@
 
 		<img src="main.jpg" style="width: 100%">  
 	  <div class="w3-display-left w3-padding-large">
-    	<h1 class="w3-animate-opacity" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
-    	<h1 class="w3-animate-opacity w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
+    	<h1 class="w3-animate-zoom" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
+    	<h1 class="w3-animate-zoom w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
   	</div>
 </header>
 	<br>
-	<div class="container w3-animate-opacity w3-padding-64"id="about">
+	<div class="container w3-animate-zoom w3-padding-64"id="about">
 		<h1 class="w3-center display-4">About Us</h1>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 		</p>
 	</div>
 	<hr>
-	<div  class="w3-container w3-black w3-padding-64" id="projects">
+	<div  class="w3-container w3-padding-64" style="background-color: #33001a;color: white;" id="projects">
 		<h1 class="w3-center display-4">Projects</h1>
 		<h2 class="display-5">Current Projects</h2>
 		<div class="row">
 			<div class="col">
 				<div class="w3-hover-opacity" id="card-1">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -102,7 +102,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-2">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -111,7 +111,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-3">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -120,7 +120,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-4">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -130,7 +130,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-8">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -138,9 +138,9 @@
 			</div>
 
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
+				  <div class="w3-hover-opacity " id="card-8">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -153,7 +153,7 @@
 			<div class="col">
 				<div class="w3-hover-opacity" id="card-5">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -162,7 +162,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-6">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -171,7 +171,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-7">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -180,17 +180,7 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-8">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
-				  </div>
-				</div>
-			</div>
-
-			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
-				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -200,7 +190,17 @@
 			<div class="col">
 				  <div class="w3-hover-opacity" id="card-8">
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body">
+				  <div class="card-body w3-black">
+				    <h5 class="card-title">Card title</h5>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
+				  <div class="card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
@@ -218,7 +218,7 @@
 			<a href="inventory.html"><button class="w3-btn w3-round-xxlarge w3-purple">Visit Inventory for complete details</button></a>
 		</div>
 	</div>
-	<div class="w3-container w3-black w3-padding-64" id="gallery">
+	<div class="w3-container w3-padding-64" style="background-color: #33001a;color: white;" id="gallery">
 		<h1 class="w3-center display-4">Gallery</h1>
 		<div class="mySlides w3-display-container w3-center w3-padding-32">
 	    <img src="https://picsum.photos/300/150" style="width:70%">
@@ -246,7 +246,7 @@
 	</div>
 	</div>
 
-	<div class="container w3-center w3-padding-64" id="teams">
+	<div class="container w3-center w3-padding-64 w3-animate-zoom" id="teams">
 		<h1 class="display-4">Team</h1>
 		<div class="w3-center">
 			<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="..." >
@@ -257,20 +257,20 @@
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
 				<h3 class="display-6 w3-hide-small w3-hide-medium" >Manoj Kumar</h3>
-				<h3 class="display-6">Manoj</h3>
+				<h3 class="display-6 w3-hide-large">Manoj</h3>
 				<h5 class="display-7">Coordinator</h5>
 			</div>
 	
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Sumit Sourabh</h3>
-				<h3 class="display-6">Sumit</h3>
+				<h3 class="display-6 w3-hide-large">Sumit</h3>
 				<h5 class="display-6">Coordinator</h5>
 			</div>
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Md.Azam</h3>
-				<h3 class="display-6">Azam</h3>
+				<h3 class="display-6 w3-hide-large">Azam</h3>
 				<h5 class="display-6">Coordinator</h5>
 			</div>
 		</div>
@@ -278,26 +278,26 @@
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Akshat Jain</h3>
-				<h3 class="display-6 team-text">Akshat</h3>
+				<h3 class="display-6 team-text w3-hide-large">Akshat</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 	
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Aayush Shah</h3>
-				<h3 class="display-6 team-text">Aayush</h3>
+				<h3 class="display-6 team-text w3-hide-large">Aayush</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250">
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Akash Balaji</h3>
-				<h3 class="display-6 team-text">Akash</h3>
+				<h3 class="display-6 team-text w3-hide-large">Akash</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="..."> 
 				<h3 class="display-5 w3-hide-small w3-hide-medium">Harsh Shah</h3>
-				<h3 class="display-6 team-text">Harsh</h3>
+				<h3 class="display-6 team-text w3-hide-large">Harsh</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 		</div>
