--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
 	
-			      <li class="nav-item ">
-			        <a class="nav-link" href="#about">About Us</a>
-			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="#projects">Projects</a>
 			      </li>
@@ -44,20 +41,16 @@
 			        <a class="nav-link " href="#gallery">Gallery</a>
 			      </li>
 			      
-			      <li class="nav-item">
-			        <a class="nav-link float-right" href="#teams">Team</a>
-			      </li>
 			       <li class="nav-item">
 			        <a class="nav-link float-right" href="#contact">Contact</a>
 			      </li>
 			    </ul>
 			  </div>
 
-			  <div id="navDemo" class="w3-bar-block bg-dark w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+			  <div id="navDemo" class="w3-bar-block bg-dark w3-hide w3-hide-large w3-top" style="margin-top:46px">
 			  <a href="#projects" class="nav-link t-white" onclick="myFunction()">Projects</a>
 			  <a href="inventory.html" class="nav-link t-white" onclick="myFunction()">Inventory</a>
 			  <a href="#gallery" class="nav-link t-white" onclick="myFunction()">Gallery</a>
-			  <a href="#teams" class="nav-link t-white" onclick="myFunction()">Team</a>
 			  <a href="#contact" class="nav-link t-white" onclick="myFunction()">Contact Us</a>
 			</div>
 		</nav>
@@ -78,71 +71,67 @@
     	<h1 class="w3-animate-zoom w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
   	</div>
 </header>
-	<br>
-	<div class="container w3-animate-zoom w3-padding-64"id="about">
-		<h1 class="w3-center display-4">About Us</h1>
-		<p>
-			There is a huge gap between what we learn in lecture halls and what industries really need. Many engineers lack practical knowledge and experience in industry. With the objective to bridge that gap Tinkerers Lab IIT Patna has been established to provide a perfect environment that allows the upcoming engineers to improve their knowledge and skills. Our motive is to provide practical knowledge and hands-on -expereience. The lab is accessible 24X7 throughout the year. This allows students to work as per their comfort. This platform offers complete freedom for <em>Tinkerers</em> to work with their ideas and to mould and develop it into something innovative and useful. 
-		</p>
-	</div>
-	<hr>
-	<div  class="w3-container w3-padding-64" style="background-color: #33001a;color: white;" id="projects">
+
+	<div  class="w3-container w3-padding-64 main-gradient" style="color: white;" id="projects">
 		<h1 class="w3-center display-4">Projects</h1>
 		<h2 class="display-5">Current Projects</h2>
 		<div class="row">
 			<div class="col">
-				<div class="w3-hover-opacity" id="card-1">
-				  <img src="projects/imgs/pr3.jpg" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				<div class="w3-hover-opacity mk-card" id="card-1">
+				  <img src="projects/imgs/pr3.jpg" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Robocon 2020</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <p class="mk-card-pfont-size">The ABU Robocon is an Asian Oceanian College robot competition, founded in 2002 by Asia-Pacific Broadcasting Union. In the competition robots compete to complete a task within a set period of time. </p>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-2">
-				  <img src="projects/imgs/pr1.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-2">
+				  <img src="projects/imgs/pr1.png" class=" card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">E-Yantra 2019</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <p class="mk-card-pfont-size">An initiative by IIT Bombay that aims to create the next generation of embedded systems engineers with a practical outlook to help provide practical solutions to some of the real world problems.</p>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-3">
-				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-3">
+				  <img src="https://picsum.photos/300/250" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Inter IIT Tech Meet</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <p class="mk-card-pfont-size">The Inter IIT Tech Meet is a consequence of students of various IITs coming together envisioning a progressive India. </p>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-4">
-				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-4">
+				  <img src="https://picsum.photos/300/250" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
-				  </div>
-				</div>
-			</div>
-
-			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
-				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
-				    <h5 class="card-title">Card title</h5>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 
 			<div class="col">
-				  <div class="w3-hover-opacity " id="card-8">
-				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Card title</h5>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity mk-card" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
+				    <h5 class="card-title">Card title</h5>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
@@ -151,58 +140,60 @@
 		<h2 class="display-5">Past Projects</h2>
 		<div class="row">
 			<div class="col">
-				<div class="w3-hover-opacity" id="card-5">
-				  <img src="projects/imgs/pr3.jpg" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				<div class="w3-hover-opacity mk-card" id="card-5">
+				  <img src="projects/imgs/pr3.jpg" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Robocon 2019</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <p class="mk-card-pfont-size">An initiative by IIT Bombay that aims to create the next generation of embedded systems engineers with a practical outlook to help provide practical solutions to some of the real world problems.</p>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-6">
-				  <img src="projects/imgs/pr1.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-6">
+				  <img src="projects/imgs/pr1.png" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">E-Yantra 2018</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <p class="mk-card-pfont-size">An initiative by IIT Bombay that aims to create the next generation of embedded systems engineers with a practical outlook to help provide practical solutions to some of the real world problems.</p>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-7">
-				  <img src="projects/imgs/pr4.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-7">
+				  <img src="projects/imgs/pr4.png" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Self-Balancing Bot</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
-				  <img src="projects/imgs/pr5.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-8">
+				  <img src="projects/imgs/pr5.png" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">UAV for Disaster Management</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
-				  <img src="projects/imgs/pr2.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-8">
+				  <img src="projects/imgs/pr2.png" class="card-img-top mk-card-img" alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Wall Follower</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
 
 			<div class="col">
-				  <div class="w3-hover-opacity" id="card-8">
-				  <img src="projects/imgs/pr2.png" class="card-img-top" alt="...">
-				  <div class="card-body w3-black">
+				  <div class="w3-hover-opacity mk-card" id="card-8">
+				  <img src="projects/imgs/pr2.png" class="card-img-top mk-card-img " alt="...">
+				  <div class="card-body mk-card-body w3-black">
 				    <h5 class="card-title">Line Follower</h5>
-				    <a href="#" class="btn btn-primary">Know More</a>
+				    <a href="#" class="btn btn-primary">Read More</a>
 				  </div>
 				</div>
 			</div>
@@ -219,7 +210,7 @@
 			<a href="inventory.html"><button class="w3-btn w3-round-xxlarge w3-purple">Visit Inventory for complete details</button></a>
 		</div>
 	</div>
-	<div class="w3-container w3-padding-64" style="background-color: #33001a;color: white;" id="gallery">
+	<div class="w3-container w3-padding-64 main-gradient" style="color: white;" id="gallery">
 		<h1 class="w3-center display-4">Gallery</h1>
 		<div class="mySlides w3-display-container w3-center w3-padding-32">
 	    <img src="gallery/gal1.jpg" style="width:70%">
@@ -238,66 +229,10 @@
 	</div>
 	</div>
 
-	<div class="container w3-center w3-padding-64" id="teams">
-		<h1 class="display-4">Team</h1>
-		<div class="w3-center">
-			<img class="thick-border teams team-pic" src="https://lh4.googleusercontent.com/fPfHRaCejYYsXB0eR1gT7n9TLIZyg4TBcWtcXdgqrL92JuhbePnk4ZelkzckhqJj9il3PnFBDkL_WpkfccwH4wqMa4Zu__CCHs1fUm-o8YpUwp9m2480=w1280" alt="..." >
-			<h3 class="display-5">Prof Sudhir Kumar</h3>
-			<h5 class="display-6">PIC Tinkerers Lab</h5>
-		</div>
-		<div class="w3-row-padding">
-			<div class="w3-col s4">
-				<img class="thick-border teams team-pic" src="https://scontent.fbbi1-1.fna.fbcdn.net/v/t1.0-1/p240x240/79868164_3123043464615855_7355526854729531392_o.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=A2AfOU8y0RYAX_If9l-&_nc_ht=scontent.fbbi1-1.fna&_nc_tp=6&oh=27cff2ceb2db25564fb36729386e4805&oe=5ED62C4D" alt="...">
-				<h3 class="display-6 w3-hide-small w3-hide-medium" >Manoj Kumar</h3>
-				<h3 class="display-6 w3-hide-large">Manoj</h3>
-				<h5 class="display-7">Coordinator</h5>
-			</div>
 	
-			<div class="w3-col s4">
-				<img class="thick-border teams team-pic" src="https://scontent.fbbi1-1.fna.fbcdn.net/v/t1.0-1/r90/c6.12.1416.1416a/s240x240/42863938_1953827244673371_6784059787886723072_o.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=BOjvKnlmZ00AX_ETKWP&_nc_ht=scontent.fbbi1-1.fna&oh=2fb24859612c678bf28e9616cb2bed60&oe=5ED4D799" alt="...">
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Sumit Sourabh</h3>
-				<h3 class="display-6 w3-hide-large">Sumit</h3>
-				<h5 class="display-6">Coordinator</h5>
-			</div>
-			<div class="w3-col s4">
-				<img class="thick-border teams team-pic" src="https://scontent.fbbi1-1.fna.fbcdn.net/v/t1.0-1/p240x240/69714073_483322865732099_4540983774334156800_o.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=owDD3BsMdagAX8vgqyn&_nc_ht=scontent.fbbi1-1.fna&_nc_tp=6&oh=f01a8da3086ad1a94c2e15fb646a9a3c&oe=5ED7612D" alt="...">
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Md.Azam</h3>
-				<h3 class="display-6 w3-hide-large">Azam</h3>
-				<h5 class="display-6">Coordinator</h5>
-			</div>
-		</div>
-		<div class="w3-row-padding">
-			<div class="w3-col s3">
-				<img class="thick-border teams team-pic" src="https://scontent.fbbi1-1.fna.fbcdn.net/v/t1.0-0/p206x206/87326612_1535797013252433_7983517907390824448_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_ohc=L3Bi2mjbGFUAX-SBPVq&_nc_ht=scontent.fbbi1-1.fna&_nc_tp=6&oh=a42eaf0e3a6629edbe0acbc0f57f1b57&oe=5ED7055B" alt="...">
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Akshat Jain</h3>
-				<h3 class="display-6 team-text w3-hide-large">Akshat</h3>
-				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
-			</div>
-	
-			<div class="w3-col s3">
-				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Aayush Shah</h3>
-				<h3 class="display-6 team-text w3-hide-large">Aayush</h3>
-				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
-			</div>
-			<div class="w3-col s3">
-				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250">
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Akash Balaji</h3>
-				<h3 class="display-6 team-text w3-hide-large">Akash</h3>
-				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
-			</div>
-			<div class="w3-col s3">
-				<img class="thick-border teams team-pic" src="https://scontent.fbbi1-1.fna.fbcdn.net/v/t1.0-9/s960x960/49304763_1984142971663121_6285822274217967616_o.jpg?_nc_cat=107&_nc_sid=7aed08&_nc_ohc=g23fopA14sUAX9ZYOmP&_nc_ht=scontent.fbbi1-1.fna&_nc_tp=7&oh=fa81be96a2c4398d3d83b6df2deb5dcc&oe=5ED679D1" alt="..."> 
-				<h3 class="display-5 w3-hide-small w3-hide-medium">Harsh Shah</h3>
-				<h3 class="display-6 team-text w3-hide-large">Harsh</h3>
-				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
-			</div>
-		</div>
-
-	</div>
 	
 
-	<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge" id="contact">
+	<footer class="w3-container w3-padding-32 w3-center w3-black w3-xlarge" id="contact">
 	  <h1 class="display-4">Contact Us</h1>
 	  <div class="container">
 			<p>
